(WIP) aux commit to save changes